# yggdrasil

./: .clang-format  .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.sh  clean.sh  conanfile.txt  format.sh  makefile  test.cpp  test.sh
data/: outer_boundary.json
data/Somerville/: CityLimits.dbf  CityLimits.shp  CityLimits.shx
data/block-island/: boundary.polygon.geojson  boundary.simple.geojson
data/massachusetts/: navigation_area_100k.dbf  navigation_area_100k.shp  navigation_area_100k.shx
docs/: README.md  index_comparison.md
examples/: .keep
include/: world_tree.hpp
include/geometry/: cell_value.hpp  interpolate.hpp  layout.hpp  layout.inl  polygon.hpp  sample.hpp  segment.hpp
include/io/: json.hpp  readers.hpp  readers.inl  writers.hpp  writers.inl
include/node/: tile_cache.fbs  tile_cache_generated.h  tile_node.hpp
src/: tree.cpp  tree.hpp  tree.test.cpp  world_tree.cpp  world_tree.hpp  world_tree.inl
src/base/: chart-interface.hpp  chart-interface.inl  chart-loaders.inl
src/geometry/: bounds.cpp  bounds.hpp  bounds.test.cpp  grid-pattern.hpp  interpolate.cpp  interpolate.hpp  interpolate.inl  interpolate.test.cpp  layout.cpp  path.cpp  path.hpp  polygon.cpp  polygon.hpp  polygon.test.cpp  raster.hpp  row_index.hpp  row_index.inl  row_index.test.cpp  sample.hpp  segment.cpp  segment.hpp  square.cpp  square.hpp  z_index.hpp  z_index.inl  z_index.test.cpp
src/geometry/index/: row-index.hpp  row-index.test.cpp  typedef.hpp  z-index.hpp  z-index.inl  z-index.test.cpp
src/grid/: fixed-grid.cpp  fixed-grid.hpp  fixed-grid.test.cpp  grid.cpp  grid.hpp  grid.test.cpp  rolling-grid.cpp  rolling-grid.hpp  rolling-grid.test.cpp
src/index/: index2u.cpp  index2u.hpp  row-index.hpp  row-index.test.cpp  typedef.hpp  z-index.hpp  z-index.inl  z-index.test.cpp
src/io/: json.hpp  readers.hpp  readers.inl  writers.cpp  writers.hpp
src/lib/base/: chart-interface.hpp
src/lib/chart-box/: CMakeLists.txt  chart-box.cpp  chart-box.hpp  chart-frame-mapping.cpp  chart-frame-mapping.hpp  chart-interface.hpp  chart-interface.inl  chart-layer-interface.hpp  chart-layer-interface.inl
src/lib/chart-box/geometry/: polygon.cpp
src/lib/geometry/: bounds.cpp  bounds.hpp  grid-pattern.hpp  path.test.cpp  polygon.hpp  polygon.test.cpp  raster.hpp  segment.hpp
src/lib/grid/: fixed-grid.cpp  fixed-grid.hpp
src/lib/index/: index2u.cpp  index2u.hpp  row-index.test.cpp  z-index.hpp  z-index.inl  z-index.test.cpp
src/lib/io/: CMakeLists.txt  chart-base-loader.hpp  chart-base-writer.hpp  chart-debug-loader.hpp  chart-debug-writer.hpp  chart-geojson-loader.hpp  chart-geojson-loader.inl  chart-json-keys.hpp  chart-json-loader.inl  chart-png-writer.hpp  chart-png-writer.inl  chart-shapefile-loader.inl  chart-shapefile-writer.hpp  extra.cpp  readers.hpp  readers.inl  writers.hpp
src/lib/layer/fixed-grid/: CMakeLists.txt  fixed-grid.cpp  fixed-grid.hpp  fixed-grid.test.cpp  row-major-index.hpp  z-order-index.hpp
src/lib/layer/quad-tree/: CMakeLists.txt  quad-tree.cpp
src/lib/layer/roll-grid/: CMakeLists.txt  rolling-grid.cpp
src/lib/node/: CMakeLists.txt  grid-node.cpp  grid-node.hpp  tile-cache-generated.h  tile-cache.fbs  tile-node.cpp  tile-node.test.cpp
src/lib/quad-tree/: quad-node.test.cpp  quad-tree.test.cpp
src/lib/search/: a-star.hpp  a-star.inl  cost.cpp
src/node/: grid-node.cpp  grid-node.hpp  grid-node.test.cpp  grid_node.cpp  grid_node.hpp  grid_node.test.cpp  node.hpp  node_status.hpp  quad_node.cpp  quad_node.hpp  tile-cache.fbs  tile-node.cpp  tile-node.hpp  tile-node.test.cpp  tile_cache.fbs  tile_node.cpp  tile_node.hpp  tile_node.test.cpp
src/node/quad/: quad_node.cpp  quad_node.hpp  quad_node.test.cpp
src/node/tile/: tile_cache_generated.h  tile_node.cpp  tile_node.hpp  tile_node.test.cpp
src/process/merge/: CMakeLists.txt  main.cpp
src/process/profile/: CMakeLists.txt
src/profile/: main.cpp
src/quad/: quad-node.cpp  quad-node.test.cpp
src/quad-tree/: quad-node.cpp  quad-node.hpp  quad-tree.cpp  quad-tree.inl
src/search/: a-star.hpp  a-star.inl  a-star.test.cpp  cost.cpp  cost.hpp  reachable-cell.cpp  reachable-cell.hpp  rrt-star.hpp  rrt-star.inl  rrt-star.test.cpp
test/: tree.cpp
test/geometry/: interpolate.cpp  layout.cpp  polygon.cpp
test/node/: quad_node.cpp  tile_node.cpp
tools/profile/: benchmark.cpp
